Update Rimskeho prava a výmaz VVPS.

--- a/docs/rimske-pravo/rimske-pravo-test.mdx
+++ b/docs/rimske-pravo/rimske-pravo-test.mdx
@@ -13,7 +13,7 @@ export const civilniProces = "Civilní proces"
 export const osobniPrava = "Osobní práva"
 
 :::info Úvod 
-Náš interaktivní test z římského práva je upravenou verzí známého _mega souboru_. Níže si můžete vybrat, která témata chcete procvičit. Každá odpověď k otázce obsahuje také citaci z KUSU, nebo Institucí, která danou otázku vysvětluje.
+Náš interaktivní test z římského práva je upravenou verzí známého _mega souboru_. Níže si můžete vybrat, která témata chcete procvičit. Každá odpověď k otázce obsahuje také citaci z KUSu, nebo Institucí, která danou otázku vysvětluje.
 :::
 
 <QuizFilter>
@@ -787,6 +787,8 @@ Náš interaktivní test z římského práva je upravenou verzí známého _meg
   </QuizOption>
   <QuizOption label={"b. je contra bonos mores"} isCorrect={true}>
     Ano, výsměšnou podmínku lze považovat za podmínku proti dobrým mravům (KUS, s. 101-102).
+
+    Instituce, s. 288: _„Nemravná podmínka je contra bonos mores, podmínka, která má jednajícího zesměšnit.“_
   </QuizOption>
   <QuizOption label={"c. není neplatná"} isCorrect={true}>
     Ano, výsměšná podmínka není neplatná, tzn. je platná. Pouze 
@@ -1376,259 +1378,247 @@ Náš interaktivní test z římského práva je upravenou verzí známého _meg
     Ne, litiskontestace nesouvisí s právem na odvolání.
   </QuizOption>
   <QuizOption label={"b. způsobí nutnou novaci"} isCorrect={true}>
-    (Instituce str. 261: původní obligace zaniká a přenáší se do práva procesního \-\> vzniká spor****)
+    Instituce, s. 163: _„Novatio – nahrazení původního závazku (prior obligatio) novou obligací (nova obligatio), která vzniká na jeho místě, starý závazek automaticky zaniká.“_
+
+    Instituce, s. 164: _„Novatio necessaria (nutná novace) - litiscontestatio, místo původního závazku vzniká závazek z litiskontestace.”_
   </QuizOption>
   <QuizOption label={"c. dělí řízení na fázi in iure a apud iudicem"} isCorrect={true}>
-    (Instituce str. 262\)
+    Ano, viz Instituce, s. 262.
   </QuizOption>
   <QuizOption label={"d. ani jedna z nabízených odpovědí"} isCorrect={false}>
   </QuizOption>
 </Quiz>
 
-<Quiz question={"Jestliže pošlu otroka s mým džbánem pro vodu, než se otrok vrátí, mám ke džbánu \: "}>
-  <QuizOption label={"a. ani jedna z nabízených odpovědí"} isCorrect={false}>
-    
-  </QuizOption>
-  <QuizOption label={"b. animus possidendi"} isCorrect={true}>
-    (Instituce str. 65, 124\)
-  </QuizOption>
-  <QuizOption label={"c. possessio"} isCorrect={true}>
-    (Instituce str.65, 122\)
-  </QuizOption>
-  <QuizOption label={"d. corporalis possessio"} isCorrect={true}>
-    (Instituce str. 65, 123\)
-  </QuizOption>
-</Quiz>
+<Quiz question={"Jestliže pošlu otroka s mým džbánem pro vodu, než se otrok vrátí, mám ke džbánu: "} topic={vecnaPrava}>
+  <QuizOption label={"a. animus possidendi"} isCorrect={true}>
+    Ano, pokud něco dám otroku, aby s tím pro mě vykonal práci, nevzdávám se vůle danou věc ovládat.
 
-<Quiz question={"Jestliže pošlu otroka s mým vědrem pro vodu, než se otrok vrátí, mám k vědru \: "}>
-  <QuizOption label={"a. dominium"} isCorrect={false}>
-    (KUS str. 63: otrok nevlastní žádný majetek, co nabývá, nabývá pro svého pána)
+    Instituce, s. 123: _„Subjektivní prvek animus rem sibi habendi (animus) - držební (vlastnická) vůle, vůle být vlastníkem věci, která je fyzicky ovládána, vůle ovládat ji jen pro sebe.“_
   </QuizOption>
-  <QuizOption label={"b. possessio"} isCorrect={false}>
-    (Instituce str. 123, Instituce str. 64: otrok nabývá držbu pro svého pána)
+  <QuizOption label={"b. possessio"} isCorrect={true}>
+    Ano, džbán je můj, jsem jeho vlastníkem a proto k němu mám possessio. 
+
+    Instituce, s. 103: _„Ius possidendi (právo držet věc) - fyzicky ji ovládat, proto je také držba (possessio) znakem vlastnictví.“_
+
+    KUS, marg. č. 274, s. 163: _„Měl-li tedy u sebe věc otrok, byl za držitele považován nikoliv on, nýbrž jeho pán, neboť jen pán jako osoba mající způsobilost k právům, byl schopen mít i tomu odpovídající vůli nakládat věcí jako vlastní.“_
   </QuizOption>
-  <QuizOption label={"c. corporalis possessio"} isCorrect={false}>
-    (Instituce str. 123, Instituce str. 64: otrok nabývá držbu pro svého pána)
+  <QuizOption label={"c. corporalis possessio"} isCorrect={true}>
+    KUS, marg. č. 274, s. 163: _„Animus possidendi je v římském pojetí nezastupitelný, naopak fyzické ovládání věci může prostředkovat jiná osoba, než ta, která je považována za držitele. Bylo tomu především tehdy, šlo-li o osobu podrobenou moci držitelově (otroci a osoby cizího práva - personae alieni iuris), v jejímž bezprostředním fyzickém ovládání se věc nalézala.“_
   </QuizOption>
   <QuizOption label={"d. ani jedna z nabízených odpovědí"} isCorrect={false}>
-    
   </QuizOption>
 </Quiz>
 
-<Quiz question={"Interpolace byly \: "}>
-  <QuizOption label={"a. povoleny císařem Iustinianem"} isCorrect={false}>
-    (Instituce str. 34: Digesta jsou součástí CIC)
+<Quiz question={"Interpolace byly: "} topic={pramenyPrava}>
+  <QuizOption label={"a. povoleny císařem Iustinianem"} isCorrect={true}>
+    Instituce, s. 34: _„Digesta seu Pandectae – práce byly zahájeny konstitucí Deo auctore, podle níž měli kompilátoři používat díla autorizovaných právníků a mohli ve vybraných textech provádět změny (interpolace).“_
   </QuizOption>
   <QuizOption label={"b. zakázány císařem Iustinianem"} isCorrect={false}>
-    
+    Ne, císař Iustinian je naopak povolil. 
   </QuizOption>
-  <QuizOption label={"c. změny v textech fragmentů v Digestech"} isCorrect={false}>
-    (Instituce str. 34\)
+  <QuizOption label={"c. změny v textech fragmentů v Digestech"} isCorrect={true}>
+    Instituce, s. 32: _„Interpolace - úpravy prováděné v textech klasických právníků.“_
+
+    Instituce, s. 34: _„Digesta seu Pandectae – práce byly zahájeny konstitucí Deo auctore, podle níž měli kompilátoři používat díla autorizovaných právníků a mohli ve vybraných textech provádět změny (interpolace).“_
   </QuizOption>
   <QuizOption label={"d. ani jedna z nabízených odpovědí"} isCorrect={false}>
-    
   </QuizOption>
 </Quiz>
 
-<Quiz question={"Za věc hmotnou se považuje \: "}>
-  <QuizOption label={"a. peníze"} isCorrect={false}>
-    (****Instituce str. 99: věc hmotná)
-  </QuizOption>
-  <QuizOption label={"b. ani jedna z nabízených odpovědí"} isCorrect={false}>
-    
+<Quiz question={"Za věc hmotnou se považuje: "} topic={vecnaPrava}>
+  <QuizOption label={"a. peníze"} isCorrect={true}>
+    Ano, peněz se lze dotknout.
+
+    Instituce, s. 99: _„Res corporales (věci hmotné) – lze se jich dotknout, např. otrok, zvíře, pozemek, oděv, jídlo, nábytek.“_
   </QuizOption>
   <QuizOption label={"c. pozůstalost"} isCorrect={false}>
-    (Instituce str. 99: věc nehmotná)
+    Ne, pozůstalost jako celek je věc nehmotná.
+
+    Instituce, s. 99: _„Res incorporales (věci nehmotné) – nelze se jich dotknout, jedná se o práva, s nimiž lze obchodovat (s výjimkou vlastnictví), např. pozůstalost, požívací právo, pohledávky.“_
   </QuizOption>
   <QuizOption label={"d. pohledávka"} isCorrect={false}>
-    (Instituce str. 99: věc nehmotná)
+    Ne, pohledávka jako taková je věc nehmotná.
+
+    Instituce, s. 99: _„Res incorporales (věci nehmotné) – nelze se jich dotknout, jedná se o práva, s nimiž lze obchodovat (s výjimkou vlastnictví), např. pozůstalost, požívací právo, pohledávky.“_
+  </QuizOption>
+  <QuizOption label={"e. právo pastvy na cizím pozemku"} isCorrect={false}>
+    Ne, právo pastvy bychom mohli považovat za právo požívací a to je nehmotné. 
+
+    Instituce, s. 99: _„Res incorporales (věci nehmotné) – nelze se jich dotknout, jedná se o práva, s nimiž lze obchodovat (s výjimkou vlastnictví), např. pozůstalost, požívací právo, pohledávky.“_
+  </QuizOption>
+  <QuizOption label={"f. otrokyně"} isCorrect={true}>
+    Ano, otrokyně je hmotná věc.
+
+    KUS, marg. č. 139, s. 83: _„Co podle práva je a co není věc, určuje sám právní řád, pro římský je příznačné, že věcí může za určitých okolností být i člověk, ovšem člověk svobody zbavený. Chceme-li definovat věc v římskoprávním smyslu, řekneme, že je to hmotný celek, který má samostatnou existenci, ať už je živý (otrok, zvířata) nebo neživý (ostatní věci).“_
+  </QuizOption>
+  <QuizOption label={"g. dcera alieni iuris"} isCorrect={false}>
+    Ne, dcera alieni iuris není zbavena svobody ve smyslu status libertatis, tudíž není věcí.
+  </QuizOption>
+  <QuizOption label={"h. manželka in manu"} isCorrect={false}>
+    Ne, manželka in manu není zbavena svobody ve smyslu status libertatis, tudíž není věcí.
+  </QuizOption>
+  <QuizOption label={"g. ani jedna z nabízených odpovědí"} isCorrect={false}>
   </QuizOption>
 </Quiz>
 
-<Quiz question={"Za věc nehmotnou se považuje \: "}>
-  <QuizOption label={"a. peníze"} isCorrect={false}>
-    (Instituce 99, věc druhová, generická)
-  </QuizOption>
-  <QuizOption label={"b. ani jedna z nabízených odpovědí"} isCorrect={false}>
-    
-  </QuizOption>
-  <QuizOption label={"c. právo pastvy na cizím pozemku"} isCorrect={true}>
-    (*Instituce 100\)
-  </QuizOption>
-  <QuizOption label={"d. pozůstalost"} isCorrect={true}>
-    (*Instituce 100\)
-  </QuizOption>
+<Quiz question={"Mezi accidentalia negotii patří: "} topic={pravniJednani}>
   <QuizOption label={"a. modus qualificatus"} isCorrect={true}>
-    (určení účelové sleduje zájem buď dárce samého anebo osob třetích anebo zájem veřejný, je závazný, KUS str. 105 \+  Instituce 290\)
+    Ano, modus qualificatus patří mezi vedlejší ustanovení.
+    
+    KUS, marg. č. 167, s. 99: _„Accidentalia negotii jsou ‚náhodné‘ kusy obsahu a předpokládají výslovný projev stran nebo jednajícího. Jsou to tedy vedlejší ustanovení, která podle vůle stran např. odkládají účinky jednání či jinak je modifikují. Accidentale negotii je podmínka (condicio), určení dne splatnosti při zápůjčce, modus (určení účelové) apod.“_
+
+    Instituce, s. 190: _„Modus je závazný, jen pokud spočívá v určitém jednání ve prospěch poskytujícího, nebo třetí osoby (modus qualificatus).“_
   </QuizOption>
   <QuizOption label={"b. modus duplex"} isCorrect={false}>
-    (není)
+    Modus duplex jako pojem římské právo nezná.
   </QuizOption>
   <QuizOption label={"c. modus simplex"} isCorrect={false}>
-    (= určení účelové, jedná se o zájem obdarovaného, závazný není, chápe se jen jako dobrá rada, KUS 105, Instituce 304-308 \+ http://www.ius-wiki.eu/rimske-pravo/pfuk/riman/zkouska/skupina-i/otazka-55)
+    Ano, modus simplex patří mezi vedlejší ustanovení.
+
+    Instituce, s. 290: _„Jestliže je [modus] zaměřen ve prospěch obdařeného (modus simplex), je nezávazný“_
+  </QuizOption>
+  <QuizOption label={"d. zákonná odpovědnost za vady"} isCorrect={false}>
+    Ne, pokud je to odpovědnost daná zákonem, nemůže se jednat o accidentalium negotii. Accidentalia negotii se stávají součástí právního jednání pouze v případě, když se tak jednající dohodnou. V tomto případě půjde o condicio legis (Instituce, s. 287-288).
+  </QuizOption>
+  <QuizOption label={"e. ujednání o smluvní pokutě"} isCorrect={true}>
+    Ano, takové ujednání může být condicio, které patří mezi accidentalia negotii (Instituce, s. 288).
+  </QuizOption>
+  <QuizOption label={"f. ani jedna z nabízených odpovědí"} isCorrect={false}>
+  </QuizOption>
+</Quiz>
+
+<Quiz question={"Disimulované právní jednání je právní jednání: "} topic={pravniJednani}>
+  <QuizOption label={"a. zhojené"} isCorrect={false}>
+    Ne, to není definice disimulovaného jednání.    
+  </QuizOption>
+  <QuizOption label={"b. skrývající jiné"} isCorrect={true}>
+    Instituce, s. 293: _„Disimulované právní jednání – jednající uzavírají jedno právní jednání a snaží se tím dosáhnout jiného cíle, který není dovolen (tzv. relativní simulace).“_
+  </QuizOption>
+  <QuizOption label={"c. předstírané"} isCorrect={false}>
+    Ne, simulované právní jednání je pouze „na oko“, neskrývá jiné jednání (Instituce, s. 293).
   </QuizOption>
   <QuizOption label={"d. ani jedna z nabízených odpovědí"} isCorrect={false}>
-    
   </QuizOption>
 </Quiz>
 
-<Quiz question={"Disimulované právní jednání je právní jednání \: "}>
-  <QuizOption label={"a. ani jedna z nabízených odpovědí"} isCorrect={false}>
-    
-  </QuizOption>
-  <QuizOption label={"b. zhojené"} isCorrect={false}>
-    
-  </QuizOption>
-  <QuizOption label={"c. skrývající jiné"} isCorrect={false}>
-    (KUS 96, Instituce 293\)
-  </QuizOption>
-  <QuizOption label={"d. předstírané"} isCorrect={false}>
-    (KUS 96 – simulované PJ)
-  </QuizOption>
-</Quiz>
+<Quiz question={"Co zahrnuje termín peculium?: "} topic={rodinaManzelstvi}>
+  <QuizOption label={"a. majetek syna pod otcovskou mocí získaný při službě v armádě"} isCorrect={true}>
+    Ano, toto je peculium castrense.
 
-<Quiz question={"Simulované právní jednání je právní jednání \: "}>
-  <QuizOption label={"a. uzavřené na oko"} isCorrect={false}>
-    (z nahlížení po testu)
-  </QuizOption>
-  <QuizOption label={"b. předstírané"} isCorrect={false}>
-    (z nahlížení po testu)
-  </QuizOption>
-  <QuizOption label={"c. ani jedna z nabízených odpovědí"} isCorrect={false}>
-    
-  </QuizOption>
-  <QuizOption label={"d. zakrývající jiné"} isCorrect={false}>
-    
-  </QuizOption>
-</Quiz>
-
-<Quiz question={"Co zahrnuje termín peculium? \: "}>
-  <QuizOption label={"a. majetek syna pod otcovskou mocí získaný při službě v armádě"} isCorrect={false}>
-    (Instituce 85 – peculium castrense)
+    Instituce, s. 85: _„Peculium castrense (táborové pekulium) – majetek potomka získaný v souvislosti se službou ve vojsku.“_
   </QuizOption>
   <QuizOption label={"b. majetek dcery, který obdržela od otce při sňatku"} isCorrect={false}>
-    (Instituce 91- věno)
+    Ne, to je definice věna. 
+
+    Instituce, s. 91: _„Věno (dos) – majetkový soubor (i pohledávka) slíbený, nebo předaný, v souvislosti s uzavřením manželství, určený k podílení se na nákladech rodinného života.“_
   </QuizOption>
-  <QuizOption label={"c. ani jedna z nabízených odpovědí"} isCorrect={false}>
-    
-  </QuizOption>
-  <QuizOption label={"d. majetek daný otrokovi při propuštění na svobodu"} isCorrect={false}>
-    (Instituce 85 – o peculium se jedná ve chvíli, kdy je otrok pod mocí patera familias)
-  </QuizOption>
-  <QuizOption label={"a. ani jedna z nabízených odpovědí"} isCorrect={false}>
-    
-  </QuizOption>
-  <QuizOption label={"b. majetek nabytý synem pod mocí otce rodiny při službě v armádě"} isCorrect={false}>
-    (Instituce 85 – peculium castrense)
-  </QuizOption>
-  <QuizOption label={"c. majetek vyčleněný otcem rodiny otrokovi"} isCorrect={false}>
-    (Instituce 85 – peculium servile)
+  <QuizOption label={"c. majetek daný otrokovi při propuštění na svobodu"} isCorrect={false}>
+    Ne, to do definice peculia nepatří.
+
+    Instituce, s. 85: _„Peculium - majetek spravovaný osobou podřízenou otci rodiny.“_
   </QuizOption>
   <QuizOption label={"d. majetek manželky sine manu"} isCorrect={false}>
-    (*Instituce 85 – nejedná se o peculium)
+    Ne, manželka sine manu není skrze manželství podřízená otci rodiny, tudíž nespravuje jeho peculium.
+
+    Instituce, s. 85: _„Peculium - majetek spravovaný osobou podřízenou otci rodiny.“_
+  </QuizOption>
+  <QuizOption label={"e. ani jedna z nabízených možností"} isCorrect={false}>
   </QuizOption>
 </Quiz>
 
-<Quiz question={"Kdo se rozhodne věc, kterou si vypůjčil, prodat, má k této věci \: "}>
-  <QuizOption label={"a. possessio"} isCorrect={false}>
-    (člověk už k věci nemá jen corpus possidendi, ale jelikož věc chce prodat, tedy nakládat s ní dle vlastní vůle, má k ní i animus possidendi – tedy je držitelem)
+<Quiz question={"Kdo se rozhodne věc, kterou si vypůjčil, prodat, má k této věci: "} topic={vecnaPrava}>
+  <QuizOption label={"a. possessio"} isCorrect={true}>
+    Ano, protože věc má fyzicky ve své moci a chce ji prodat, tedy nakládat s ní dle vlastní vůle, má k ní corpus i animus, tedy je držitelem – má possessio (viz Instituce, s. 123). 
   </QuizOption>
   <QuizOption label={"b. naturalis possessio"} isCorrect={false}>
-    (má detenci, ale tím, že ji chce prodat, nastává držba)
+    Ne, vzhledem k tomu, že chce věc prodat, má vůči ní animus possidendi, což je v rozporu s definicí possessio naturalis – detence (Instituce, s. 123).
   </QuizOption>
   <QuizOption label={"c. proprietas"} isCorrect={false}>
-    (věc není ve vlastnictví toho člověka)
+    Ne, proprietas je vlastnictví podle kviritského práva. Pokud jsem si věc od někoho musel vypůjčit, nemohu být vlastníkem. 
   </QuizOption>
   <QuizOption label={"d. ani jedna z nabízených odpovědí"} isCorrect={false}>
-    
   </QuizOption>
 </Quiz>
 
-<Quiz question={"Kdo se rozhodne věc, kterou si pronajal, zastavit, má k této věci \: "}>
-  <QuizOption label={"a. possessio"} isCorrect={false}>
-    (člověk už k věci nemá jen corpus possidendi, ale jelikož věc chce prodat, tedy nakládat s ní dle vlastní vůle, má k ní i animus possidendi – tedy je držitelem)
-  </QuizOption>
-  <QuizOption label={"b. naturalis possessio"} isCorrect={false}>
-    (rozhodne se věc zastavit, tedy už není detence)
-  </QuizOption>
-  <QuizOption label={"c. proprietas"} isCorrect={false}>
-    (při pronájmu nepřechází vlastnické právo, tudíž se nejedná o vlastníka)
-  </QuizOption>
-  <QuizOption label={"d. ani jedna z nabízených odpovědí"} isCorrect={false}>
-    
-  </QuizOption>
-</Quiz>
+<Quiz question={"Kdo má věc u sebe z důvodu úschovy, má k věci: "} topic={vecnaPrava}>
+  <QuizOption label={"a. proprietas"} isCorrect={false}>
+    Ne, proprietas je vlastnictví, to úschovou nenabýváme. 
 
-<Quiz question={"Kdo má věc u sebe z důvodu úschovy, má k věci \: "}>
-  <QuizOption label={"a. ani jedna z nabízených odpovědí"} isCorrect={false}>
+    Instituce, s. 179: _„Depositarius získává k předmětu úschovy detenci.“_
+  </QuizOption>
+  <QuizOption label={"b. naturalis possessio"} isCorrect={true}>
+    Ano, naturalis possessio je detence a tu depositář z důvodu úschovy získává.
     
+    Instituce, s. 123: _„Detence (také possessio naturalis, possessio corpore, possessio pro alieno) [má ji] např. depositář, komodatář, konduktor.“_
+
+    Instituce, s. 179: _„Depositarius získává k předmětu úschovy detenci.“_
   </QuizOption>
-  <QuizOption label={"b. proprietas"} isCorrect={false}>
-    (Instituce 179 – depozitář získává k předmětu úschovy detenci, nikoliv vlastnictví/proprietas)
-  </QuizOption>
-  <QuizOption label={"c. naturalis possessio"} isCorrect={false}>
-    (Instituce 123/179– depositář \= úschova \-\> detence)
-  </QuizOption>
-  <QuizOption label={"d. dominium"} isCorrect={false}>
+  <QuizOption label={"c. dominium"} isCorrect={false}>
     (Instituce 179 – depozitář získává k předmětu úschovy detenci, nikoliv vlastnictví/dominium)
   </QuizOption>
+  <QuizOption label={"d. ani jedna z nabízených odpovědí"} isCorrect={false}>
+    
+  </QuizOption>
 </Quiz>
 
-<Quiz question={"V jakém příbuzenském vztahu bude manželka provdaná cum manu k otci svého manžela, jemuž je manžel podřízen? \: "}>
+<Quiz question={"V jakém příbuzenském vztahu bude manželka provdaná cum manu k otci svého manžela, jemuž je manžel podřízen?: "} topic={rodinaManzelstvi}>
   <QuizOption label={"a. cognatio"} isCorrect={false}>
-    (Instituce 88 – manželka zůstává ve své původní kognátské rodině)
-  </QuizOption>
-  <QuizOption label={"b. affinitas"} isCorrect={false}>
-    (KUS 74 – poměr manželky k příbuzným manžela)
-  </QuizOption>
-  <QuizOption label={"c. ani jedna z nabízených odpovědí"} isCorrect={false}>
+    Ne, pokrevní svazek s původní rodinou si žena zachová.
     
+    Instituce, s. 88: _„Matrimonium cum in manu conventione (přísné manželství, s manželskou mocí) — manželka se stává členkou agnátské rodiny svého manžela v důsled ku podřízení se jeho manželské moci, ztrácí veškeré svazky s původní rodinou, kromě svazků pokrevního pří buzenství.“_
+  </QuizOption>
+  <QuizOption label={"b. affinitas"} isCorrect={true}>
+    Ano, manželka je v tomto případě s otcem svého manžela sešvagřená.
+
+    KUS, marg. č. 123, s. 74: _„Affinitou rozumíme poměr jednoho manžela k pokrevně příbuzným manžela druhého: tedy vztah ženicha k otci a matce nevěsty (tchán, tchýně), k jejím bratřím a sestrám, vztah manžela k dětem manželky (vitricus - otčím) anebo manželčin k dětem manžela (noverca - macecha), za affinitu se však nepovažuje vztah příbuzných jednoho manžela k příbuzným druhého (ačkoli v hovo“_
+  </QuizOption>
+  <QuizOption label={"c. agnatio"} isCorrect={true}>
+    Ano, manželka provdaná cum manu je členkou agnátské rodiny manžela.
+
+    Instituce, s. 88: _„Matrimonium cum in manu conventione (přísné manželství, s manželskou mocí) — manželka se stává členkou agnátské rodiny svého manžela v důsled ku podřízení se jeho manželské moci, ztrácí veškeré svazky s původní rodinou, kromě svazků pokrevního pří buzenství.“_
+  </QuizOption>
+  <QuizOption label={"d. ani jedna z nabízených odpovědí"} isCorrect={false}>
   </QuizOption>
 </Quiz>
 
-<Quiz question={"Jako vlastník pozemku musím strpět \: "}>
-  <QuizOption label={"a. ani jedna z nabízených odpovědí"} isCorrect={false}>
-    
+<Quiz question={"Jako vlastník pozemku musím strpět: "} topic={vecnaPrava}>
+  <QuizOption label={"a. immise"} isCorrect={true}>
+    Instituce, s. 104: _„Imissiones - průniky hluku, vody, světla, kouře, stékající vody, či zápa chu ze sousedního pozemku; musí být strpěny, pokud nepřesahují obvyklou míru.“_
   </QuizOption>
-  <QuizOption label={"b. immise"} isCorrect={true}>
-    (KUS 155\)
+  <QuizOption label={"b. výkon hypotekárního práva"} isCorrect={true}>
+    Ano, vlastník pozemku může pozemek určit jako smluvní zástavu a musí potom strpět výkon hypotekárního práva.
+
+    Instituce, s. 158: _„Hypotheca (tzv. smluvní zástava, také pignus conventum) – pouhá dohoda o tom, že v případě neuhrazení dluhu může věřitel prodat nějakou dlužníkovu věc, věřitel proto fyzicky předmět hypotéky neovládá.“_
   </QuizOption>
-  <QuizOption label={"c. výkon hypotekárního práva"} isCorrect={false}>
-    (****Instituce 104\)
+  <QuizOption label={"c. emise"} isCorrect={false}>
+    Ne, emise označuje to, co by vycházelo z vlastníkova pozemku na pozemek cizí, tudíž se nemůže jednat o strpení.
   </QuizOption>
-  <QuizOption label={"d. emise"} isCorrect={false}>
-    (KUS 155\)
+  <QuizOption label={"d. ani jedna z nabízených odpovědí"} isCorrect={false}>
   </QuizOption>
 </Quiz>
 
-<Quiz question={"Mezi věcná práva k věci cizí patří \: "}>
+<Quiz question={"Mezi věcná práva k věci cizí nepatří: "} topic={vecnaPrava}>
   <QuizOption label={"a. ususfructus"} isCorrect={false}>
-    (KUS 195 nahoře)
+    Instituce, s. 133: _„Ususfructus – obsahem je právo užívat cizí věc a brát z ní plody (ius utendi fruendi).“_
   </QuizOption>
   <QuizOption label={"b. emphyteutické právo"} isCorrect={false}>
-    (Instituce 135 dole)
+    Instituce, s. 135: _„Emphyteusis – věcné právo sui generis spočívající v braní užitků z cizí věci, které emphyteutu opravňuje k užívání pozemku stejným způsobem jako jeho vlastník.“_
   </QuizOption>
   <QuizOption label={"c. pozemková služebnost"} isCorrect={false}>
     (KUS 192 dole)
   </QuizOption>
-</Quiz>
-
-<Quiz question={"Mezi v ěcná práva k věci cizí NEpatří \: "}>
-  <QuizOption label={"a. pignus"} isCorrect={false}>
-    ( zástava )
+  <QuizOption label={"d. pignus"} isCorrect={false}>
+    (KUS 192 dole)
   </QuizOption>
-  <QuizOption label={"b. hypotekární právo"} isCorrect={false}>
-    
+  <QuizOption label={"e. hypotekární právo"} isCorrect={false}>
+    (KUS 192 dole)
   </QuizOption>
-  <QuizOption label={"c. ani jedna z nabízených odpovědí"} isCorrect={false}>
-    
-  </QuizOption>
-  <QuizOption label={"d. emphyteutické právo"} isCorrect={false}>
-    
+  <QuizOption label={"f. ani jedna z nabízených možností"} isCorrect={true}>
+    Ano, všechno výše uvedené patří mezi věcná práva k věci cizí.
   </QuizOption>
 </Quiz>
 
-<Quiz question={"Tempus pro vydržení movitosti dle justinánského práva činí \: "}>
+<Quiz question={"Tempus pro vydržení movitosti dle justinánského práva činí: "} topic={vecnaPrava}>
   <QuizOption label={"a. 2 roky"} isCorrect={false}>
     (KUS 178 nahoře – vydržecí doba nemovitosti podle Zákona 12 desek, klasické právo též)
   </QuizOption>
